<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>grasp01_gazebo</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="grasp@todo.todo">grasp</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ros2_control</depend>
  <depend>controller_manager</depend>
  <depend>grasp01_controller</depend>
  <depend>grasp01_description</depend>
  <depend>grasp01_moveit2</depend>
  <depend>robot_state_publisher</depend>
  <!-- <depend>gazebo_ros_pkgs</depend> -->
  <depend>gazebo_ros2_control</depend>
  


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/.."/>
  </export>
</package>
