<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>grasp01_robotics_experiments</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="kennethaldahir.martinezmoreno@ontariotechu.net">grasp</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>moveit</depend>
  <depend>geometry_msgs</depend>
  <depend>grasp01_moveit2</depend>
  <depend>grasp01_description</depend>
  <depend>grasp01_hardware</depend>

  <exec_depend>matplotlib</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
